--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,9 @@ services:
     command: redis-server
     ports:
       - "6379:6379"
-
     volumes:
       - ./data/redis:/var/lib/redis
-      - ./data/redis-config:/usr/local/etc/redis/redis.config
+      - ./data/redis-config:/usr/local/etc/redis
 
   # db:
   #   image: postgres:15
