--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node src",
+    "start": "node dist",
     "dev": "nodemon --exec babel-node src",
     "prebuild": "rm -rf dist",
     "build": "babel src -d dist",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.22.11",
     "@babel/node": "^7.22.10",
     "@babel/preset-env": "^7.22.14",
+    "artillery": "^2.0.0-38",
     "nodemon": "^3.0.1"
   }
 }
