--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,11 @@ services:
     volumes:
       - ./src:/app/src
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+        restart: true
+      redis:
+        condition: service_started
   redis:
     image: redis:7.2
     restart: always
@@ -33,6 +36,12 @@ services:
       - ./data/redis-config:/usr/local/etc/redis
   db:
     image: postgres:15
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -d test_db -h localhost -p 5432"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
