--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=5500
 REDIS_PORT=6379
 DB_PORT=5432
 DB_HOST=db
-DB_NAME=db
+DB_NAME=test_db
 DB_PASSWORD=root
 DB_USER=root
 DB_DIALECT=postgres
