--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,8 @@ server {
     listen 80;
 
     location / {
-        proxy_pass      http://nodeserver/;
-        rewrite /node/(.*) /$1 break;
+        proxy_pass      http://nodeserver;
+        rewrite ^/node/(.*) /$1 break;
         proxy_redirect    default;
         proxy_set_header  Host $host;
         proxy_set_header  X-Real-IP $remote_addr;
