--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,24 +58,24 @@ services:
       - "5432:5432"
     volumes:
       - ./data/db:/var/lib/postgresql/data
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
-    environment:
-      - discovery.type=single-node
-    ports:
-      - "9200:9200"
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.15.0
-    volumes:
-      - ./logstash-config:/usr/share/logstash/config
-    depends_on:
-      - elasticsearch
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.15.0
-    ports:
-      - "5601:5601"
-    depends_on:
-      - elasticsearch
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
+  #   environment:
+  #     - discovery.type=single-node
+  #   ports:
+  #     - "9200:9200"
+  # logstash:
+  #   image: docker.elastic.co/logstash/logstash:7.15.0
+  #   volumes:
+  #     - ./logstash-config:/usr/share/logstash/config
+  #   depends_on:
+  #     - elasticsearch
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:7.15.0
+  #   ports:
+  #     - "5601:5601"
+  #   depends_on:
+  #     - elasticsearch
   pgadmin:
     container_name: pgadmin4_container
     image: dpage/pgadmin4
