--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
     deploy:
       replicas: 5
       resources:
-        limits:
+        reservations:
           cpus: "2"
           memory: "1000M"
     expose:
@@ -36,7 +36,7 @@ services:
   redis:
     image: redis:7.2
     restart: always
-    command: redis-server
+    command: ["redis-server", "--save", "3600", "1"]
     ports:
       - "6379:6379"
     volumes:
@@ -87,9 +87,3 @@ services:
       - "5050:8080"
     depends_on:
       - db
-# stateful - session 문제 유저가 많아질수록 서버 속도 다운 (세션은 서버 단위를 넘어설수없음). 보안적인 부분은 좋음 마이크로서비스 이런데서 세션처리 불가 그래서 나온게
-# 디비 커넥션이 느리지만 user 개인의 입장이지만 유저가 100만명이면 서버에 100만명에 대한 세션 array가 존재하기에 서버의 인메모리 또는 메모리 캐시서버를 그만큼 쓰니깐 성능 다운
-# 세션을 어디에 저장할지? 디비, 서버 (하면 안됨 - request 저장하는 메인 서버 느려지면 안됨), high traffic을 하더라도 캐시서버를 써서 커버가능
-# stateless - token 토큰을 가지고 있는한 로그인 처리 (보안적인 이슈) gwt token 인증된 이메일이 들어있음 (client id 추가 넣어서 보안적인 이슈 최소화)
-# stateful + stateless 병행
-# 쿠키
