--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 env:
-  AWS_REGION: ap-northeast-2 # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: ticketing
 
 jobs:
