--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -7,7 +7,7 @@ on:
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: ticketing
-  ECS_TASK_DEFINITION: task_definition.json
+  ECS_TASK_DEFINITION: task_def:2
   CONTAINER_NAME: ticketing
   ECS_SERVICE: ticketing-service
   ECS_CLUSTER: ticketing-compose-infra-cluster
