modification on build yaml

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -17,7 +17,8 @@ jobs:
     name: Build container image and push it to ECR.
     runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -52,9 +53,9 @@ jobs:
           NEW_VERSION: ${{ steps.increment-version.outputs.new_version }}
           BUILD_TAG: "latest"
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
+          # Docker 컨테이너 빌드 및
+          # ECR로 푸시하여
+          # ECS에 배포할 수 있도록 합니다.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_VERSION .
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_VERSION $ECR_REGISTRY/$ECR_REPOSITORY:$BUILD_TAG
 
