--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=5500
-REDIS_PORT=6379
-REDIS_HOST=3.36.85.21
-DB_PORT=5432
-DB_HOST=db
-DB_NAME=test_db
-DB_PASSWORD=root
-DB_USER=root
-DB_DIALECT=postgres
+# REDIS_PORT=6379
+# REDIS_HOST=43.203.128.216
+# DB_PORT=5432
+# DB_HOST=db
+# DB_NAME=test_db
+# DB_PASSWORD=root
+# DB_USER=root
+# DB_DIALECT=postgres
