--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
+    "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.10",
