applied cron job

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,16 +68,11 @@ services:
       - "5050:8080"
     depends_on:
       - db
-  zookeeper:
-    image: wurstmeister/zookeeper:latest
-    container_name: zookeeper
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
     ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka:latest
-    container_name: kafka
-    ports:
-      - "9092:9092"
+      - "5672:5672"
+      - "15672:15672"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      - RABBITMQ_DEFAULT_USER=sanghun
+      - RABBITMQ_DEFAULT_PASS=sanghun
