--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,3 +76,18 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=sanghun
       - RABBITMQ_DEFAULT_PASS=sanghun
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+  consumer:
+    build:
+      context: ./consumer
+      dockerfile: Dockerfile
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    restart: always
+    ports:
+      - "3001:3001"
