--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,26 +68,34 @@ services:
       - "5050:8080"
     depends_on:
       - db
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      - RABBITMQ_DEFAULT_USER=sanghun
-      - RABBITMQ_DEFAULT_PASS=sanghun
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "status"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-  consumer:
+  # rabbitmq:
+  #   image: rabbitmq:3-management-alpine
+  #   ports:
+  #     - "5672:5672"
+  #     - "15672:15672"
+  #   environment:
+  #     - RABBITMQ_DEFAULT_USER=sanghun
+  #     - RABBITMQ_DEFAULT_PASS=sanghun
+  #   healthcheck:
+  #     test: ["CMD", "rabbitmq-diagnostics", "status"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 5
+  # consumer:
+  #   build:
+  #     context: ./consumer
+  #     dockerfile: Dockerfile
+  #   depends_on:
+  #     rabbitmq:
+  #       condition: service_healthy
+  #   restart: always
+  #   ports:
+  #     - "3001:3001"
+  cron:
     build:
-      context: ./consumer
+      context: ./cron
       dockerfile: Dockerfile
     depends_on:
-      rabbitmq:
-        condition: service_healthy
-    restart: always
+      - redis
     ports:
-      - "3001:3001"
+      - "3002:3002"
